--- a/src/index.css
+++ b/src/index.css
@@ -149,7 +149,6 @@ input:focus {
   color: #fff;
   border: 0;
   border-radius: 8px;
-  color: #fff;
   width: 100px;
   height: 40px;
   cursor: pointer;
@@ -190,6 +189,7 @@ input:focus {
 .about-link {
   display: flex;
   justify-content: flex-end;
+  margin: 10px 10px;
 }
 
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
